<resources>
    <string name="app_name">Shopper Driver</string>


    <!-- Strings used for fragments for navigation -->
    <string name="fragment_ride">Solicitação de Corrida</string>
    <string name="fragment_orders">Histórico de Viagem</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!-- Bootom menu -->
    <string name="bottom_menu_ride">Solicitar Corrida</string>
    <string name="bottom_menu_history">Histórico</string>
    <string name="bottom_menu_plus">Mais</string>


    <!-- ride fragment -->

    <string name="ride_textForm">Detalhes da Rota</string>
    <string name="ride_textFrom">Origem:</string>
    <string name="ride_textTo">Destino:</string>
    <string name="ride_textClient">ID Cliente:</string>
    <string name="ride_buttonRequestRide">Solicitar Corrida</string>
    <string name="ride_buttonConfirmRide">Escolher E Confirmar Corrida</string>

    <string name="error_customer_id">Insira o ID completo do cliente.</string>
    <string name="error_origin">Insira a origem.</string>
    <string name="error_destination">Insira o destinos.</string>
    <string name="error_driver_id">Insira o ID completo do Motorista.</string>


    <!-- orders fragment -->
    <string name="orders_textForm">Histórico de Viagens</string>
    <string name="orders_textClient">ID Cliente:</string>
    <string name="orders_textDriver">Motorista:</string>
    <string name="orders_buttonFilter">Filtrar</string>


    <!-- API -->
    <string name="ERROR_UNEXPECTED">Um erro inesperado ocorreu. Tente novamente mais tarde.</string>
    <string name="ERROR_LOAD">Erro ao carregar requisição.</string>
    <string name="ERROR_EMPLYT_DRIVER">"Nenhuma opção de motorista disponível para a rota informada."</string>
    <string name="ERROR_INTERNET_CONNECTION">Conexão à internet necessária para uso da applicação.</string>
    <string name="ERROR_INTERNET_ACCESS">Sem conexão com a internet. Por favor, verifique sua conexão e tente novamente.</string>
    <string name="SUCESSO_INTERNET_ACCESS">Conexão com Internet OK!</string>

    <string name="ERROR_ESTIMATE_RIDE">Erro ao estimar a corrida. Tente novamente.</string>
    <string name="SUCCESS_ESTIMATE_RIDE">Estimativa de corrida obtida com sucesso!</string>

    <string name="ERROR_CONFIRM_RIDE">Erro ao confirmar a corrida. Por favor, tente novamente.</string>
    <string name="SUCCESS_CONFIRM_RIDE">Corrida confirmada com sucesso!</string>

    <string name="ERROR_RIDE_HISTORY">Erro ao carregar o histórico de corridas. Tente novamente.</string>
    <string name="SUCCESS_RIDE_HISTORY">Histórico de corridas carregado com sucesso!</string>
    <string name="ERROR_NO_HISTORY">Nenhuma corrida encontrada no histórico.</string>
    <string name="ERROR_NO_RIDES_FOUND">Nenhuma corrida encontrada no histórico.</string>

    <!-- DIALOG -->
    <string name="dialog_text_sucess">Operação realizada com sucesso!</string>
    <string name="dialog_text_error">Falha ao enviar operação!</string>
    <string name="dialog_loading_ride">Confirmando Corrida...</string>
    <string name="dialog_loading_drivers">Obtendo Motoristas Disponiveis...</string>
    <string name="dialog_loading_history">Obtendo Históricos Disponiveis...</string>
    <string name="dialog_textfield_error">Houve Falha em alguns campos!</string>
    <string name="dialog_location_permition_title">Permissão de Localização Necessária</string>
    <string name="dialog_location_permition_description">Este aplicativo necessita da permissão de localização para funcionar corretamente.</string>


    <string name="maps_title">Localização Atual</string>
    <string name="maps_title_route">Rota</string>


    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>