<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ride.RideFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/orders_textForm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/orders_textForm"
            android:textColor="@color/black"
            android:textSize="16sp" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/orders_textClient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/orders_textClient"
            app:errorEnabled="true"
            app:startIconDrawable="@drawable/ic_people">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/orders_editClient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/orders_spinnerDriver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/orders_textDriver"
            app:errorEnabled="true"
            app:startIconDrawable="@drawable/ic_car">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/orders_spinnerDriverContent"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:inputType="none"
                android:cursorVisible="false"
                android:focusable="false" />

        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>

    <Button
        android:id="@+id/orders_buttonFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/orders_buttonFilter"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:backgroundTint="@color/primaryColor"
        android:textColor="@android:color/white" />


</androidx.constraintlayout.widget.ConstraintLayout>