<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:defaultNavHost="true"
    app:navGraph="@navigation/ride"
    tools:context=".ui.ride.RideFragment">


    <org.osmdroid.views.MapView
        android:id="@+id/ride_map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@color/primaryColor"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/ride_cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="12dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="16dp">

            <TextView
                android:id="@+id/ride_textForm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/ride_textForm"
                android:textColor="@color/black"
                android:textSize="16sp" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ride_textClient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                app:startIconDrawable="@drawable/ic_people"
                android:hint="@string/ride_textClient">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ride_editClient"
                    android:layout_width="match_parent"
                    android:inputType="text"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ride_textFrom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                app:startIconDrawable="@drawable/ic_location"
                android:hint="@string/ride_textFrom">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ride_editFrom"
                    android:layout_width="match_parent"
                    android:inputType="text"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ride_textTo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                app:startIconDrawable="@drawable/ic_car"
                android:hint="@string/ride_textTo">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ride_editTo"
                    android:layout_width="match_parent"
                    android:inputType="text"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>




    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/ride_buttonStartRide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ride_buttonRequestRide"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:backgroundTint="@color/primaryColor"
        android:textColor="@android:color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>